2016-01-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Specification): Mention that 
	keywords in Info format should be read case-insensitively.  
	Suggestion for manual from Karl Berry.
	Move disclaimer about actual practice to the end of the node.

2016-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Move check for 
	xsubpp to before gl_INIT, in order not to waste time running the 
	gnulib checks if the extension isn't going to be built anyway.

2016-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (synch_with_program): Remove function.
	* info/t/c-u-m-x-scroll-forward.sh,
	* info/t/inc-sea-forward.sh,
	* info/t/inc-sea-history.sh,
	* info/t/inc-sea-insensitive.sh,
	* info/t/inc-sea-forward-nonregex.sh,
	* info/t/gc-split.sh: Don't call it.  It could lead to an 
	infinite loop if the program had already exited, and also slowed 
	down the tests.
	* info/pseudotty.c: Call tcsetattr to turn off special 
	characters like C-u and C-s.

2016-01-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac: Print error if 
	"xsubpp" program is not found.  This avoids an attempt to later
	execute a "typemap" program when $(XSUBPP) -typemap is done.

2016-01-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex: For LuaTeX, output bytes instead of UTF-8 
	multi-byte characters.  Add comment to say this is a problem 
	with XeTeX which we haven't fixed.  Problem under LuaTeX and 
	XeTeX reported by Masamichi Hosoda.

2016-01-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* gnulib: Run gnulib-tool --add-import, omitting the "mkstemp" 
	module which isn't used any where (possibly used in texindex.c, 
	which isn't distributed any more).

	* gnulib: Run gnulib-tool --add-import, omitting "memmem".

2016-01-07  Masamichi Hosoda  <trueroad@trueroad.jp> (tiny change)

        * doc/texinfo.tex: For XeTeX, fix input by bytes instead of